201812/Kubernetes/sample/sample-spring.yaml
# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-spring
  namespace: default
  labels:
    app: sample-spring
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: sample-spring
  template:
    metadata:
      labels:
        app: sample-spring
    spec:
      containers:
      - name: sample-spring
        image: nalbam/sample-spring:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2048Mi

---
# ------------------- Service ------------------- #

apiVersion: v1
kind: Service
metadata:
  name: sample-spring
  namespace: default
  labels:
    app: sample-spring
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: sample-spring

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-spring
  namespace: default
  labels:
    app: sample-spring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sample-spring.BASE_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-spring
          servicePort: 80
